--- a/main.css
+++ b/main.css
@@ -7169,7 +7169,7 @@ a.text-dark:hover, a.text-dark:focus {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("/assets/office.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/office.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
