--- a/main.scss
+++ b/main.scss
@@ -21,7 +21,7 @@ font-weight: 500;
 header.masthead {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
-    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/office.jpg");
+    background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(../assets/office.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
