--- a/main.scss
+++ b/main.scss
@@ -370,6 +370,16 @@ p {
     }
   }
 
+  @media only screen and (min-width: 1200px){
+    .dk-footer-box-info{
+         padding: 37px;
+     
+    }
+
+
+    
+    }
+
   
 
 
